<resources>
    <string name="app_name">RiiDE</string>
    <string name="loading">Loading…</string>
    <string name="create_trip">Create a trip:</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="from">From:</string>
    <string name="to_dots">To:</string>
    <string name="to">To</string>
    <string name="departure_time">Departure date and time:</string>
    <string name="choose_time">Choose time</string>
    <string name="price_per_person">Price per person:</string>
    <string name="max_passengers">Max number of passengers:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="current_passengers">Passengers in current trip:</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="edit">Edit</string>
    <string name="no_passengers_found">No Passengers found</string>
    <string name="no_trips_found">No trips found</string>
    <string name="click_trip">Click a trip for details:</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="search">Search</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="driver_dots">Driver:</string>
    <string name="show_trips">Show all available trips</string>
    <string name="login_dots">Login:</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?\n make one!</string>
    <string name="welcome">Welcome to RiiDE,\n</string>
    <string name="intro_text">Find yourself a trip to any given destination, or create your own and enjoy the company of cheerful passengers!</string>
    <string name="not_in_trip">You are currently not in a trip</string>
    <string name="details">Details</string>
    <string name="open_profile">Open your profile info</string>
    <string name="help">Help</string>
    <string name="create_account">Create an account:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="trip_details">Trip details:</string>
    <string name="time_date">Time: \nDate:&#032;</string>
    <string name="seats_taken">Teats taken:</string>
    <string name="view_passengers">View Passengers</string>
    <string name="user_info">User Info:</string>
    <string name="submit_rating">Submit rating</string>
    <string name="current_rating">Current user rating:</string>
    <string name="not_rated">Not rated yet</string>
    <string name="rating_bar">User rating bar</string>
    <string name="contact_info">\'s contact info:</string>
    <string name="no_info_provided">No user info provided.</string>
    <string name="fill_contact_info">You need to fill in your contact info in your profile first</string>
    <string name="trip_created">Trip created successfully</string>
    <string name="give_price">Please give a price per passenger</string>
    <string name="cannot_be_in_several_trips">You cannot be in several trips at the same time</string>
    <string name="wrong_time_chosen">You cannot time travel</string>
    <string name="not_logged_in_error">Please Login or create an account first</string>
    <string name="you">&#032;(You)</string>
    <string name="full">&#032;(Full)</string>
    <string name="results_for">Results for</string>
    <string name="seats">Seats</string>
    <string name="create">Create</string>
    <string name="refill_fields">Please refill the fields correctly</string>
    <string name="logged_in_success">Logged in successfully</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="current_trip_details">Current trip details:</string>
    <string name="no_trip_join">You currently aren\'t in a trip,\nJoin or create one!</string>
    <string name="what_is_ride">What is RiiDE?</string>
    <string name="app_description">RiiDE is an algerian local carpooling app, it provides you the ability to create and share, or join trips.\nTo start using it, first fill in the "contact info" field in your profile, now you can either search for a trip, join it then contact the driver via the info on their profile, or make your own trip and wait for people to join it.\nNote: You can only be in one trip at a time.\n\nThis app was made as an end of cycle project for our bachelor\'s CS degree.\n\nGithub: @50t0r25 @windyznuts</string>
    <string name="close">Close</string>
    <string name="account_created">Account successfully created</string>
    <string name="username_taken">Username already taken</string>
    <string name="username_unsafe">Username cannot contain \'@\' and must be 15 characters or less</string>
    <string name="trip_joined">Trip joined successfully</string>
    <string name="trip_left">Trip left successfully</string>
    <string name="trip_deleted">Trip deleted successfully</string>
    <string name="trip_recheck_error">The trip wasn\'t free anymore</string>
    <string name="warning">Warning</string>
    <string name="trip_delete_warning">Are you sure you want to delete this trip?\nthis will also kick all the passengers.</string>
    <string name="save">Save</string>
    <string name="caution">Caution</string>
    <string name="edit_info_warning">Your contact info has to be accessible by other users, filling it with anything else will get you banned.</string>
    <string name="rate_user_warning">Are you sure you want to rate this user</string>
    <string name="stars">stars</string>
    <string name="rate">Rate</string>
    <string name="no_user_info">No user info provided yet.</string>
    <string name="error">Error</string>
    <string name="go_back">Go Back</string>
    <string name="check_net_error">An error occurred while accessing the server, please verify your internet connexion then retry</string>
</resources>